load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//rules:cloud_function_deploy.bzl", "cf_deploy")

buildifier(
    name = "buildifier",
)

gazelle(name = "gazelle")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    data = [
        "//ml_python/ai/langchain/llm/openai:requirements",
        "//ml_python/slack:requirements",
        "//ml_python/utils/secrets:requirements",
    ],
    requirements_txt = "requirements.txt",
    visibility = ["//visibility:public"],
)

# Needs --build_python_zip (see .bazelrc)
py_binary(
    name = "main",
    srcs = glob(["*.py"]),
    legacy_create_init = 1,
    visibility = ["//visibility:public"],
    deps = [
        "//ml_python/ai/langchain/llm/openai",
        "//ml_python/slack",
        "//ml_python/utils/secrets",
        requirement("functions_framework"),
    ],
)

cf_deploy(
    name = "slackbot",
    dep = ":main",
    entrypoint = "dispatch",
)
