load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//rules:gofmt.bzl", "gofmt_test")

buildifier(
    name = "buildifier",
)

gofmt_test()

# gazelle:prefix github.com/ML/voiceAgent/server/detect
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["detect_intent.go",
            "streamer.go"],
    importpath = "github.com/ML/voiceAgent/server/detect",
    visibility = ["//visibility:public"],
    deps = [
        "//voiceAgent/proto:go_default_library",
        "//voiceAgent/server/functions:go_default_library",
        "//voiceAgent/sessions:go_default_library",
        "@com_google_cloud_go_dialogflow//cx/apiv3beta1:go_default_library",
        "@com_google_cloud_go_dialogflow//cx/apiv3beta1/cxpb:go_default_library",
        "@io_opentelemetry_go_contrib_detectors_gcp//:go_default_library",
        "@com_google_cloud_go_compute_metadata//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)
