load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//rules:gofmt.bzl", "gofmt_test")

buildifier(
    name = "buildifier",
)

gofmt_test()

# gazelle:prefix github.com/ML/voiceAgent/server/detect
gazelle(name = "gazelle")

go_library(
    name = "detect",
    srcs = [
        "detect_intent.go",
        "streamer.go",
    ],
    importpath = "github.com/ML/voiceAgent/server/detect",
    visibility = ["//visibility:public"],
    deps = [
        "//voiceAgent/proto:go_default_library",
        "//voiceAgent/server/functions:functions",
        "//voiceAgent/sessions",
        "@com_google_cloud_go_dialogflow//cx/apiv3beta1",
        "@com_google_cloud_go_dialogflow//cx/apiv3beta1/cxpb",
        "@org_golang_google_api//option",
    ],
)
